[package]
name = "syscall-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
systable-macro-derive = {path = "./systable-macro-derive"}
paste = "1.0.14"
inventory = { git = "https://github.com/os-module/inventory"}
